package main;

import java.awt.*;

public interface IFlipPhone {

    void makeCall(String number);
    void takePhoto();
    String getSpecification();
    String getContants();
}
