package main;

import java.awt.*;

public interface ISmartPhone {

    void setPhoto(String img);
    void makeCall(String number);
    void takePhotoButBetter(String choosenFilter);
    String getSpecification();
    String getContants();

}
